--- a/tree/mainline/stories/Toki-chan/1476-of-sodas-and-annoying-lovers/rus.textile
+++ b/tree/mainline/stories/Toki-chan/1476-of-sodas-and-annoying-lovers/rus.textile
@@ -80,3 +80,9 @@
 
 *005*2011-05-10 00:51
 
+@Phantom: Он и мой фаворит ^^ *воображает, что он действительно странный внутри*
+
+@Silvery: *протягивает тебе салфетку*
+
+Друзья, рад, что вам понравился фик! >ж<
+
