--- a/20Male/8381-male-desperation/rus.textile
+++ b/20Male/8381-male-desperation/rus.textile
@@ -1,6 +1,6 @@
 Мужское отчаяние
 
-Автор: 20Male [October 18, 2001 at 21:26]
+Автор: 20Male [m] (m)
 
 Я публикую это, потому что несколько женщин ответили на мой предыдущий пост, сказав, что им будут интересны истории мужского отчаяния. Я знаю, что сделал не так много, поэтому мои истории могут быть не такими сексуальными, как некоторые на доске, но вот они:
 
